# mcp-a2a

./: CHANGELOG.md  Cargo.toml  README.md  mcp-server.toml
docs/: api-reference.md  frameworks.md  security.md
src/: lib.rs  main.rs  server.rs  store.rs  types.rs
tests/a2a-integration/: README.md  requirements.txt  run_tests.sh  test_mcp_google_adk.py
tests/a2a-integration/consuming_agent/: test_a2a.py
tests/a2a-integration/langgraph-agent/: agent.py
tests/a2a-integration/remote_agent/: agent.py
